Integrates with Amp.NET

--- a/initializing-asp-net-core-with-amp-net.csproj
+++ b/initializing-asp-net-core-with-amp-net.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Amp" Version="0.1.0-*" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.0.1" />
   </ItemGroup>
